<resources>
    <string name="app_name">Orion Supply Chain</string>
    <string name="app_text">Welcome!</string>
    <string name="app_description">Please use the menu to manage the customers, orders and product catalog</string>
    <string name="button_add">Add</string>
    <string name="button_clear">Clear</string>
    <string name="button_finish">Finish</string>
    <string name="button_order">New Order</string>
    <string name="database_search">Search</string>
    <string name="database_register">Register</string>
    <string name="database_update">Update</string>
    <string name="database_remove">Remove</string>
    <string name="database_list">List</string>
    <string name="customer_label">Customer</string>
    <string name="customer_id_label">Id:</string>
    <string name="customer_id">001</string>
    <string name="customer_cnpj_label">CNPJ:</string>
    <string name="customer_cnpj">00000000000000</string>
    <string name="customer_name_label">Name:</string>
    <string name="customer_name">ABC Market</string>
    <string name="customer_address_label">Address:</string>
    <string name="customer_address">1050 Paulista Ave, SP, SP</string>
    <string name="customer_phone_label">Phone:</string>
    <string name="customer_phone">5511924896748</string>
    <string name="food_label">Food</string>
    <string name="food_id_label">Id:</string>
    <string name="food_id">001</string>
    <string name="food_name_label">Name:</string>
    <string name="food_name">Banana</string>
    <string name="food_price_label">Price:</string>
    <string name="food_price">12.5</string>
    <string name="food_producer_label">Producer:</string>
    <string name="food_producer">Bobs Banana Farm</string>
    <string name="goods_label">Goods</string>
    <string name="goods_id_label">Id:</string>
    <string name="goods_id">001</string>
    <string name="goods_name_label">Name:</string>
    <string name="goods_name">Refrigerator</string>
    <string name="goods_price_label">Price:</string>
    <string name="goods_price">1250.0</string>
    <string name="goods_category_label">Category:</string>
    <string name="goods_category">Kitchen</string>
    <string name="goods_is_build_label">Build</string>
    <string name="orders_label">Orders</string>
    <string name="orders_customer_id_label">Customer\'s id:</string>
    <string name="orders_customer_id">001</string>
    <string name="orders_supply_order_id_label">Supply Order\'s id:</string>
    <string name="orders_supply_order_id">002</string>
    <string name="supply_order_label">Supply Order</string>
    <string name="supply_order_id_label">Id:</string>
    <string name="supply_order_id">001</string>
    <string name="supply_order_customer_id_label">Customer:</string>
    <string name="supply_order_customer_id">002</string>
    <string name="supply_order_product_label">Product:</string>
    <string name="supply_order_quantity_label">Quantity</string>
    <string name="supply_order_quantity">010</string>
</resources>